--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,24 @@
 body
 {
-  background-image: url("Background-img.jpg");
+  background-image: url(fit.jpg);
+  background-size: 100%;
+  background-repeat:no-repeat ;
+  
 }
 ul{
   list-style-type: none;
+}
+a{
+  font-size: 40px;
+  color :red;
+  text-align:center;
+
+}
+a{
+  font-size: 40px;
+  color: #ffa931;
+  text-align:center;
+
 }
 h3
 {
@@ -16,6 +31,7 @@ h3
   color: black;
   padding-bottom: 5px;
 }
+
 .mainHeader
 {
   font-family: 'Notable',sans-serif;
